Issue-107: Fixed css to add spacing when CSS expanded

--- a/src/app/faq/faq-entry/faq-entry.component.scss
+++ b/src/app/faq/faq-entry/faq-entry.component.scss
@@ -1,3 +1,6 @@
 .faq-buttons{
     justify-content: flex-end;
 }
+.mat-expanded {
+    margin-bottom: 16px !important;
+}
