--- a/src/app/faq/faq-page/faq-page.component.scss
+++ b/src/app/faq/faq-page/faq-page.component.scss
@@ -1,3 +1,3 @@
-.add-faq-button{
-    justify-content: flex-end;
+.mat-expansion-panel-spacing {
+    margin-bottom: 16px !important;
 }
